fixed navigation layout on mobile

--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ a:visited {
     }
 
     .contact-details {
+        display: flex;
+        flex-direction: column;
         font-size: 16px;
     }
 
